# GP-AGENT

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: agents.py  config.py  display.py  gmail.py  graphs.py  router.py  slack.py  utils.py
src/tools/: email_tool.py  slack_tool.py
